# SignalSeeker

./: .gitignore  .pre-commit-config.yaml  CI_CD_FIX.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.txt  README.md  RESTRUCTURE_SUMMARY.md  SETUP_CHECKLIST.md  WORKFLOW_SIMPLIFIED.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: example_usage.py
src/signalseeker/: __init__.py  config.py  data_loader.py  main.py  metrics.py  model_builder.py  preprocessor.py  trainer.py  tuner.py  utils.py  visualizer.py
tests/: __init__.py  test_config.py  test_data_loader.py  test_metrics.py  test_model_builder.py  test_preprocessor.py
